--- a/repo-01-getting-started-arangodb/conf/arangosh.conf
+++ b/repo-01-getting-started-arangodb/conf/arangosh.conf
@@ -9,7 +9,7 @@ authentication = true
 #password = root
 username = bpdp
 password = bpdp
-database = konversa
+database = myarangodb
 
 [log]
 level = error
